tests/baselines/reference/recursiveTypeParameterConstraintReferenceLacksTypeArgs.errors.txt
==== tests/cases/compiler/recursiveTypeParameterConstraintReferenceLacksTypeArgs.ts (1 errors) ====
    class A<T extends A> { }
                      ~
!!! error TS2173: Generic type references must include all type arguments.